--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NovoExperience/NOVO.git"
+    "url": "https://github.com/troverman/voetr.git"
   },
   "author": "NOVO",
   "license": ""
