--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "lodash": "~3.0.0",
+    "mailgun-js": "^0.8.0",
     "passport": "0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-github": "0.1.5",
