--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "lob": "^3.9.0",
     "lodash": "~3.0.0",
     "mailgun-js": "^0.8.0",
     "passport": "0.2.1",
@@ -38,6 +39,7 @@
     "sails-disk": "~0.10.0",
     "sails-generate-auth": "~0.2.0",
     "sails-mongo": "^0.11.0",
+    "skipper-s3": "^0.5.8",
     "validator": "~3.28.0"
   },
   "scripts": {
