--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-html2js": "~0.3.0",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
+    "handlebars": "^4.0.6",
     "include-all": "~0.1.3",
     "lob": "^3.9.0",
     "lodash": "~3.0.0",
