--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "q": "^1.4.1",
     "rc": "~0.5.0",
     "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
     "sails-generate-auth": "~0.2.0",
