--- a/assets/bower.json
+++ b/assets/bower.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "angular-google-maps": "~2.1.5",
-    "ng-file-upload": "~12.2.13"
+    "ng-file-upload": "~12.2.13",
+    "angular-google-places-autocomplete": "^0.2.7"
   }
 }
