--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.2",
+    "prerender-node": "^2.7.4",
     "q": "^1.4.1",
     "rc": "~0.5.0",
     "request": "^2.79.0",
