--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "sails-generate-auth": "~0.2.0",
     "sails-mongo": "^0.11.0",
     "skipper-s3": "^0.5.8",
-    "validator": "~3.28.0"
+    "validator": "~3.28.0",
+    "web3": "^1.0.0-beta.22"
   },
   "scripts": {
     "start": "node app.js",
