--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "sails-mongo": "^0.11.0",
     "skipper-s3": "^0.5.8",
     "validator": "~3.28.0",
-    "web3": "^1.0.0-beta.22"
+    //"web3": "^1.0.0-beta.22"
   },
   "scripts": {
     "start": "node app.js",
